--- a/sc.css
+++ b/sc.css
@@ -1,22 +1,21 @@
-body {
-    background: rgb(206,17,38); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(206,17,38,1) 0%, rgba(119,10,21,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(206,17,38,1)), color-stop(100%,rgba(119,10,21,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%); /* IE10+ */
-    background: linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%); /* W3C */
+body {    background: rgb(206,17,38); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(206,17,38,1) 0%, rgba(119,10,21,1) 100%) no-repeat center center fixed; /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(206,17,38,1)), color-stop(100%,rgba(119,10,21,1))) no-repeat center center fixed; /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%) no-repeat center center fixed; /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%) no-repeat center center fixed; /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%) no-repeat center center fixed; /* IE10+ */
+    background: linear-gradient(top,  rgba(206,17,38,1) 0%,rgba(119,10,21,1) 100%) no-repeat center center fixed; /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ce1126', endColorstr='#770a15',GradientType=0 ); /* IE6-9 */
-
     color: rgb(242,191,73);
     font-family: 'Telex', sans-serif;
     text-shadow: 1px 1px 0px #733;
     margin: 0px;
+    height: 100%;
 }
 
 #wrapper {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background-image: url('grid_noise.png');
 }
 
