--- a/sc.css
+++ b/sc.css
@@ -70,6 +70,10 @@ table {
     display: none;
 }
 
+.percCompleteRow, .schoolDaysRow {
+    color: rgb(236,209,122);
+}
+
 table {
     margin-left: auto;
     margin-right: auto;
